resoloved recurring spacing issue - hopefullly

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ input.btn:hover {
   margin-bottom: -6.5em; }
 
 .last-row {
-  margin-left: -6.5em; }
+  margin-left: -5.5em; }
 
 @media screen and (min-width: 993px) {
   .display-frame,
